--- a/package.json
+++ b/package.json
@@ -1,34 +1,18 @@
 {
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "concurrently \"pnpm dev:web\" \"pnpm dev:shared\"",
+    "dev:web": "pnpm --filter web dev",
+    "dev:shared": "pnpm --filter shared dev",
+    "build": "pnpm recursive run build",
+    "build:web": "pnpm --filter web build",
+    "build:shared": "pnpm --filter shared build"
   },
-  "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/postcss": "^4.1.14",
-    "@vercel/analytics": "latest",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "latest",
-    "geist": "latest",
-    "lucide-react": "^0.454.0",
-    "next": "15.2.4",
-    "react": "^19",
-    "react-dom": "^19",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "latest"
+  "packageManager": "pnpm@10.18.0",
+  "engines": {
+    "node": ">=22",
+    "pnpm": ">=10"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8.5",
-    "tailwindcss": "4.1.14",
-    "typescript": "^5"
+    "concurrently": "^9.2.1"
   }
 }
