--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "pnpm": ">=10"
   },
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "concurrently": "^9.2.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14"
   }
 }
