Delete unused css file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "pnpm recursive run build",
     "build:web": "pnpm --filter web build",
     "build:shared": "pnpm --filter shared build",
-    "prettier": "prettier --ignore-path .gitignore --write ./**/*.{ts,tsx,json,md}"
+    "prettier": "prettier --ignore-path .gitignore --write ./**/*.{ts,tsx,json,md,css}"
   },
   "packageManager": "pnpm@10.18.0",
   "engines": {
