--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,7 +11,18 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "next": "15.5.6",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.5",
+    "@farcaster/miniapp-sdk": "^0.2.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.454.0",
+    "date-fns": "^4.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "typescript": "^5",
