--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "concurrently": "^9.2.1",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14"
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "vercel": "^48.6.0"
   }
 }
