--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.1.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "viem": "~2.38.0",
     "wagmi": "^2.18.2"
   },
