--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@farcaster/miniapp-core": "^0.4.1",
     "@farcaster/miniapp-sdk": "^0.2.0",
     "@neynar/nodejs-sdk": "^3.34.0",
     "@radix-ui/react-avatar": "^1.1.10",
