--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,10 +1,25 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
+    // Environment setup
+    "lib": ["ESNext"],
+    "target": "ESNext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
+
+    // Output configuration
     "declaration": true,
-    "baseUrl": "./",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "noEmit": false,
+
+    // Type checking
+    "strict": true,
+    "skipLibCheck": true,
+
+    // Additional checks
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.test.ts", "dist"]
 }
