--- a/indexer/package.json
+++ b/indexer/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "ponder dev",
     "start": "ponder start",
-    "codegen": "ponder codegen"
+    "codegen": "ponder codegen",
+    "build": "tsc"
   },
   "dependencies": {
     "abitype": "^0.10.2",
@@ -17,6 +18,10 @@
   "devDependencies": {
     "@types/node": "^20.10.0",
     "typescript": "^5.3.2"
+  },
+  "exports": {
+    "./types": "./dist/src/types.js",
+    "./utils": "./dist/src/utils.js"
   },
   "engines": {
     "node": ">=18.14"
