--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "indexer": "workspace:*",
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
     "react": "19.2.1",
