--- a/indexer/.gitignore
+++ b/indexer/.gitignore
@@ -1,36 +1,18 @@
-*.exe
-*.obj
-*.out
-*.compile
-*.native
-*.byte
-*.cmo
-*.annot
-*.cmi
-*.cmx
-*.cmt
-*.cmti
-*.cma
-*.a
-*.cmxa
-*.obj
-*~
-*.annot
-*.cmj
-*.bak
-lib/*
-*.mlast
-*.mliast
-.vscode
-.merlin
-.bsb.lock
-/node_modules/
-benchmarks/
-artifacts
-generated
-logs
-*.res.js
-*.res.mjs
-*.gen.ts
-build
-.env
+# Dependencies
+/node_modules
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Misc
+.DS_Store
+
+# Env files
+.env*.local
+
+# Ponder
+/generated/
+/.ponder/
