--- a/indexer/package.json
+++ b/indexer/package.json
@@ -1,34 +1,29 @@
 {
   "name": "indexer",
-  "version": "0.1.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "clean": "tsc --clean",
-    "build": "tsc --build",
-    "watch": "tsc --watch",
-    "mocha": "ts-mocha test/**/*.ts",
-    "codegen": "envio codegen",
-    "dev": "envio dev",
-    "start": "envio start",
-    "test": "pnpm mocha"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.3.11",
-    "@types/mocha": "10.0.6",
-    "@types/node": "20.8.8",
-    "chai": "4.3.10",
-    "mocha": "10.2.0",
-    "ts-mocha": "^10.0.0",
-    "typescript": "5.2.2"
+    "dev": "ponder dev",
+    "start": "ponder start",
+    "codegen": "ponder codegen",
+    "build": "tsc"
   },
   "dependencies": {
-    "@rescript/react": "^0.14.0",
-    "envio": "2.31.0",
-    "rescript-envsafe": "^5.0.0"
+    "abitype": "^0.10.2",
+    "hono": "^4.5.0",
+    "ponder": "^0.15.17",
+    "shared": "workspace:*",
+    "viem": "^2.21.3"
   },
-  "optionalDependencies": {
-    "generated": "./generated"
+  "devDependencies": {
+    "@types/node": "^20.10.0",
+    "typescript": "^5.3.2"
+  },
+  "exports": {
+    "./types": "./dist/src/types.js",
+    "./utils": "./dist/src/utils.js"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.14"
   }
 }
