--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,5 +5,8 @@ packages:
   - indexer
 
 catalog:
-  typescript: 5.8.3
   '@types/node': 22.18.10
+  typescript: 5.8.3
+
+patchedDependencies:
+  '@nomicfoundation/hardhat-verify': patches/@nomicfoundation__hardhat-verify.patch
