--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -1,5 +1,8 @@
 NEYNAR_API_KEY=
 NEXT_PUBLIC_BASE_URL=
+NEXT_PUBLIC_PRIVY_APP_ID=
+NEXT_PUBLIC_PRIVY_CLIENT_ID=
+# Optional override if bot API is on a different host than NEXT_PUBLIC_BASE_URL
+NEXT_PUBLIC_X_BOT_API_BASE_URL=
 # Optional: Secret for authenticating cron job requests
 CRON_SECRET=
-
